8.5 Oauth 2.0
1. Oauth 2.0 (Google)
- Add "OauthSuccessHandler", "CustomOAuth2User", "CustomOAuth2UserService"
- SecurityConfig:
→ Add @EnableOAuth2Client annotation
→ Inject CustomOAuth2UserService, OauthSuccessHandler
→ Add ".oauth2Login()" to "configure" method
- UserRegisterService → add "registerNewUser(CustomOAuth2User oAuth2User)" method
- Add 'spring.security.oauth2.client' properties to application.properties
- pom.xml → add "spring-boot-starter-oauth2", "spring-security-oauth2-autoconfigure" dependencies
- Refactor signin.html accordingly
2. Refactor
- User → add (String name, String email) constructor
- JWTRequestFilter → rename variables, add package-info with @NonNullApi annotation
- Add AllArgsConstructor to ContactConfirmationResponse Dto (refactor UserAuthController accordingly)
- Add new messages_en.properties, messages_ru.properties